Mer sonarfiks (#384)
* Mer sonarfiks